piccoli fix e bounding boxes
Fix di alcuni errori di battitura e aggiunta del codice effettivo per la funzione di bounding boxes

--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -181,7 +181,7 @@
     "  return risultato\n",
     "\n",
     "\n",
-    "  class ProblemaColori(problem) :\n",
+    "class ProblemaColori(problem) :\n",
     "    #inizializzazione del problema\n",
     "    def __init__(self, initial, larghezza, altezza) :\n",
     "        self.l = larghezza\n",
@@ -396,6 +396,11 @@
     "        \n",
     "        xmin, xmax, ymin, ymax = px.min(), px.max(), py.min(), py.max()\n",
     "        \n",
+    "        #calcolo delle bounding boxes (rettangolo mininmo che contiene le celle):\n",
+    "        boxes.append([\n",
+    "            [(xmin, ymin), (xmax, ymin), (xmax, ymax), (xmin, ymax)],\n",
+    "            (np.mean(px), np.mean(py))\n",
+    "        ])\n",
     "        #ora cosideriamo la componente connessa più grande (la griglia stessa)\n",
     "        area = (xmax - xmin) * (ymax - ymin)\n",
     "        if area > max_area:\n",
@@ -491,7 +496,7 @@
     "        cx, cy = centroid\n",
     "        cv.circle((visual, int(cx), int(cy)),2,(255, 0,0), -1)\n",
     "        \n",
-    "    import matplotlib.pyplot as plt\n",
+    "        \n",
     "    plt.figure(figsize=(10,10))\n",
     "    plt.imshow(visual)\n",
     "    plt.axis('off')\n",
