--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -484,7 +484,7 @@
     "    \n",
     "    for b, centroid in boxes:\n",
     "        #disegnamo il contorno delle bounding boxes (linea gialla)\n",
-    "        points = [(b[i], b[i+1]) for i in range(0, len(b), 2)]\n",
+    "        points = b\n",
     "        points.append(points[0]) #Chiudi il poligono\n",
     "        \n",
     "        for i in range(len(points) - 1):\n",
@@ -494,7 +494,7 @@
     "            \n",
     "        #disegna il cerchio rosso sul Centroide\n",
     "        cx, cy = centroid\n",
-    "        cv.circle((visual, int(cx), int(cy)),2,(255, 0,0), -1)\n",
+    "        cv.circle(visual, (int(cx), int(cy)), 2, (255, 0, 0), -1)\n",
     "        \n",
     "        \n",
     "    plt.figure(figsize=(10,10))\n",
@@ -502,14 +502,6 @@
     "    plt.axis('off')\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdbba1ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
