Commit del file aggiornato
non ci sono troppe implementazioni, semplicemente il codice è stato un po' spostato e riorganizzato.

--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -20,6 +20,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd0b8f35",
+   "metadata": {},
+   "source": [
+    "Ecco di seguito il box con gli import e il mount del drive:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "246bff66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"ecco gli import\"\"\"\n",
+    "from google.colab import files\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "from emnist import list_datasets, extract_training_samples\n",
+    "import matplotlib.pyplot as plt\n",
+    "from random import randint\n",
+    "import random as rand\n",
+    "from google.colab import drive\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "829a918b",
    "metadata": {},
    "source": [
@@ -134,8 +165,7 @@
     "files.download('modello.keras')\n",
     "\n",
     "#salvataggio nel cloud\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
+    "\n",
     "\n",
     "#Crea una directory se non esiste:\n",
     "if not os.path.exists('/content/drive/MyDrive/modelli_keras/'):\n",
@@ -149,7 +179,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b6a78d",
+   "id": "77bec376",
+   "metadata": {},
+   "source": [
+    "Cerchiamo di passare al codice il blocchino di info da aima python che abbiamo sul drive condivisong\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aa239af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zipfile, sys, os\n",
+    "\n",
+    "#monto il drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "#definisco i percorsi:\n",
+    "zip_path = '/content/drive/MyDrive/aima/aima.zip'\n",
+    "extract_to = '/content/aima' #viene estratto in una cartella temporanea di colab per maggiore velocità di esecuzione e lettura\n",
+    "\n",
+    "#verifichiamo che il file esista (lo zip):\n",
+    "if os.path.exists(zip_path):\n",
+    "    #estraiamo\n",
+    "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "        zip_ref.extractall(extract_to)\n",
+    "    print(f'Libreria estratta con successo nel path: {extract_to}')\n",
+    "\n",
+    "    #Aggiungiamo la libreria al path\n",
+    "    sys.path.insert(0, extract_to)\n",
+    "    print(f'Libreria Pronta!')\n",
+    "else:\n",
+    "    print(f'Errore File non trovato in {zip_path}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f83f12e",
    "metadata": {},
    "source": [
     "ora definiamo i comandi / movimenti che il modello può considerare di fare:"
@@ -166,7 +234,7 @@
     "\n",
     "#Funzioen che procede a prendere gli indici delle lettere/colori e le mappa\n",
     "#direttamente al loro peso corrispettivo\n",
-    "def pesoColore(colore):\n",
+    "def pesoColore(colore) :\n",
     "  risultato = None\n",
     "  if colore == '11' : #Lettera B\n",
     "      risultato = 1\n",
@@ -174,14 +242,14 @@
     "    risultato = 2\n",
     "  elif colore == '16' : #Lettera G\n",
     "    risultato = 3\n",
-    "  elif colore == '29' ; #Lettera T\n",
+    "  elif colore == '29' : #Lettera T\n",
     "    risultato = 0\n",
-    "  else : \n",
+    "  else :\n",
     "    print(f\"Non e' stato riconosciuto il colore all'interno della cella\")\n",
     "  return risultato\n",
     "\n",
     "\n",
-    "class ProblemaColori(problem) :\n",
+    "  class ProblemaColori(problem) :\n",
     "    #inizializzazione del problema\n",
     "    def __init__(self, initial, larghezza, altezza) :\n",
     "        self.l = larghezza\n",
@@ -273,46 +341,8 @@
     "  if action in ('coloraBlu', 'coloraVerde', 'coloraGiallo') :\n",
     "        colore = {'coloraBlu' : '2', 'coloraGiallo' : '25', 'coloraVerde' : '7'}[action]\n",
     "        return c + pesoColore(colore)\n",
-    "  else :\n",
+    "  else:\n",
     "        return c + 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d293b969",
-   "metadata": {},
-   "source": [
-    "Cerchiamo di passare al codice il blocchino di info da aima python che abbiamo sul drive condivisong\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa24f80f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import zipfile, sys, os\n",
-    "\n",
-    "#monto il drive\n",
-    "drive.mount('content/drive')\n",
-    "\n",
-    "#definisco i percorsi:\n",
-    "zip_path = '/content/drive/MyDrive/aima/aima.zip'\n",
-    "extract_to = '/content/aima' #viene estratto in una cartella temporanea di colab per maggiore velocità di esecuzione e lettura\n",
-    "\n",
-    "#verifichiamo che il file esista (lo zip):\n",
-    "if os.path.exists(zip_path):\n",
-    "    #estraiamo\n",
-    "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
-    "        zip_ref.extractall(extract_to)\n",
-    "    print(f'Libreria estratta con successo nel path: {extract_to}')\n",
-    "    \n",
-    "    #Aggiungiamo la libreria al path\n",
-    "    sys.path.insert(0, extract_to)\n",
-    "    print(f'Libreria Pronta!')\n",
-    "else:\n",
-    "    print(f'Errore File non trovato in {zip_path}')"
    ]
   },
   {
