--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -530,7 +530,169 @@
     "    plt.figure(figsize=(10,10))\n",
     "    plt.imshow(visual)\n",
     "    plt.axis('off')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    \n",
+    "    #Rimuoviamo la cella che corrisponde all'intera griglia:\n",
+    "    if mac_area_inex != -1 and len(boxes) > 1:\n",
+    "        boxes.pop(max_area_index)\n",
+    "        \n",
+    "    #Ordiniamo in base alla coordinata y del centro delle celle\n",
+    "    if boxes:\n",
+    "        boxes.sort(key=lambda x: x[1][1])\n",
+    "        \n",
+    "    table = [[]]\n",
+    "    row = 0\n",
+    "    y_row_prev = boxes[0][1][1] #coordinata y del centroide della prima cella\n",
+    "    \n",
+    "    table[row].append(boxes[0])\n",
+    "    \n",
+    "    for x in boxes[1:]:         #scorriamo le bounding box ordinate per coordinata y\n",
+    "        y_row_curr = x[1][1]    #coordinata y del centroide corrente\n",
+    "        \n",
+    "        if abs(y_row_prev -y_row_curr)<50: #confronto: se la differenza tra le y è <50, allora sono sulla stessa righa.\n",
+    "            table[row].append(x)\n",
+    "        else :                             #altrimenti su una riga nuova\n",
+    "            table.append([])\n",
+    "            row += 1\n",
+    "            table[row].append(x)\n",
+    "        \n",
+    "        y_row_prev = y_row_curr\n",
+    "        \n",
+    "    #Ordiniamo ogni riga per le coordinate x di ogni cella (da sx a dx)\n",
+    "    for r in table:\n",
+    "        r.sort(key=lambda x: x[1][0])\n",
+    "        \n",
+    "    \n",
+    "    #caldolo il numero di righe e colonne:\n",
+    "    h = len(table)\n",
+    "    w = max(len(row) for row in table)\n",
+    "    \n",
+    "    final_arr = []  #array che contiene le singole celle processate:\n",
+    "    \n",
+    "    \n",
+    "    #Iteriamo sulle celle individuate nella griglia e processiamo le singole immagini (sulle celle)\n",
+    "    for row in range(h):\n",
+    "        for col in range(len(table[row])):\n",
+    "            # Ottieni le cooridnate della cella corrente\n",
+    "            box = table[row][col]\n",
+    "            \n",
+    "            img = cv.imread(filename)\n",
+    "            \n",
+    "            #Corrdinate degli angoli opposti della bounding box per definire la regione rettangolare che racchiude la cella\n",
+    "            xmin = box[0][0][0]     # x dell' angolo in alto a sx\n",
+    "            ymin = box[0][0][1]     # y dell'angolo  in alto a sx\n",
+    "            xmax = box[0][2][0]     # x dell'angolo in basso a dx\n",
+    "            ymax = box[0][2][1]     #y dell'angolo in basso a dx\n",
+    "            \n",
+    "            cell_width = xmax -xmin\n",
+    "            cell_height = ymax - ymin\n",
+    "            \n",
+    "            # L'immagine ritagliata ha un margine del 7.5% perchè la casella risulta un po' restrittiva per le lettere\n",
+    "            cropped_image = img[int(ymin - cell_height * 0.075): int (ymax + cell_height*0.075),\n",
+    "                                int(xmin - cell_width * 0.075): int(xmax + cell_width * 0.075)]\n",
+    "            \n",
+    "            #convertiamo l'immagine in scala di grigi e applichiamo un filtro gaussiano\n",
+    "            gray = cv.cvtColor(cropped_image, cv.COLOR_BGR2GRAY)\n",
+    "            blur = cv.GaussianBlur(gray, (5, 5), 0)\n",
+    "            \n",
+    "            #applichiamo la sogli adattiva\n",
+    "            th_GAUSSIAN = cv.adaptiveThreshold(blur. 255, cv.ADAPTIVE_THRESH_GAUSSIAN_C, cv.THRESH_BINARY, 11, 2)\n",
+    "            \n",
+    "            #ridimensioniamo l'immagine\n",
+    "            resize = cv.resize(th_GAUSSIAN, (28, 28), interpolation = cv.INTER_CUBIC)\n",
+    "            \n",
+    "            #invertiamo i colori dell'immagine e la prepariamo per il modello:\n",
+    "            image_model_ready = cv.bitwise_not(resize)\n",
+    "            image_model_ready = image_model_ready.reshape(28,28)\n",
+    "            image_model_ready = image_model_ready.reshape(1, 784)\n",
+    "            image_model_ready = image_model_ready.astype(\"float32\") / 255\n",
+    "            \n",
+    "            #in fine aggiungiamo l'immagine processata al final_Arr[]\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67d8b2dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c6c5e2",
+   "metadata": {},
+   "source": [
+    "euristiche\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9b46a66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from search import *\n",
+    "\n",
+    "#Best First Search per poter usare A* come alg di ricerca\n",
+    "def best_first_search_graph_h(problem,  funzEur, no_memoize = False, t = -1) :\n",
+    "    init = Node(problem.initial)\n",
+    "    if problem.goal_test(init.state) :\n",
+    "        return init\n",
+    "\n",
+    "    funzEur1 = funzEur\n",
+    "    funzEur2 = funzEur\n",
+    "    funzEur = memoize(funzEur, 'funzEur')\n",
+    "    #Frontiera di prio\n",
+    "    frontier = PriorityQueue('min', funzEur)\n",
+    "    frontier.append(init)\n",
+    "\n",
+    "    explored = set()\n",
+    "    while frontier :\n",
+    "        node = frontier.pop()\n",
+    "        if (t == 0) and problem.goal_cell(node.state) :\n",
+    "            return node\n",
+    "        explored.add(tuple(node.state))\n",
+    "        for child in node.expand(problem) :\n",
+    "            if tuple(child.state) not in explored and child not in frontier :\n",
+    "                if (t == -1) and problem.goal_test(child.state) :\n",
+    "                  t = 0\n",
+    "                  funzEur = memoize(funzEur2, 'funzEur')\n",
+    "                  frontier = PriorityQueue('min', funzEur)\n",
+    "                  frontier.append(child)\n",
+    "                  break\n",
+    "                elif child in frontier:\n",
+    "                  incumbent = frontier.get_Item(child)\n",
+    "                  if funzEur(incumbent) > funzEur(child)\n",
+    "                    del frontier[incumbent]\n",
+    "                    frontier.append(child)\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "def A_Star(problem, h = None) :\n",
+    "    h = memoize(h or problem.h, 'h')\n",
+    "    eur =  best_first_search_graph_h(problem, lambda node : h(node), no_memoize = False)\n",
+    "    if eur is not None :\n",
+    "        return eur, eur.solution(), len(eur.solution())\n",
+    "    else :\n",
+    "        return None, None, 0\n",
+    "\n",
+    "def maggiorColore(state):\n",
+    "    contatore = {}\n",
+    "    for label in state[:-1]:\n",
+    "        if label not in contatore:\n",
+    "            contatore[label] = 0\n",
+    "        contatore[label] += 1\n",
+    "\n",
+    "    maggiorColorePresente = max(contatore, key = contatore.get)\n",
+    "    return maggiorColorePresente\n",
+    "\n",
+    "def manhattan(node, maggiorColorePresente, w) :\n",
+    "    labelpresenti ="
    ]
   }
  ],
