Aggiornamento Euristica e docs
Aggiornamento della sezione euristica (Manhattan distanace) e un po' di documentazione:

--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -608,7 +608,36 @@
     "            image_model_ready = image_model_ready.astype(\"float32\") / 255\n",
     "            \n",
     "            #in fine aggiungiamo l'immagine processata al final_Arr[]\n",
-    "            "
+    "            final_arr.append(image_model_ready)\n",
+    "            \n",
+    "    # Calcola il numero totale di immagini:\n",
+    "    num_image = len(final_arr)\n",
+    "    \n",
+    "    print(f\"numero di celle : {num_image}\")\n",
+    "    print(f\"numero righe: {h}\")\n",
+    "    print(f\"numero colonne: {w}\")\n",
+    "    \n",
+    "    #visualizzazione delle img processate:\n",
+    "    fig = plt.figure(figsize=(w*3, h*3)) #adatta le dimensioni della figura\n",
+    "    for i in range(num_image):\n",
+    "        row = i // w    # calcola la riga dell'immagine originale\n",
+    "        col = i % w     # calcola la colonna dell'immagine originale\n",
+    "        ax = fig.add_subplot(h, w, i+1) #posiziiona la sotto-figura nella posizione corretta:\n",
+    "        ax.set_xticks([])\n",
+    "        ax.set_yticks([])\n",
+    "        ax.grid(False)\n",
+    "        ax.imshow(final_arr[i].reshape(28, 28), cmap = 'gray')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #calcolo delle probabilità e assegnazione delle etichette:\n",
+    "    probabilities, labels = get_prob_array(modello_filtrato, final_arr)\n",
+    "    cleanup = cleandata(data=labels, probabilities=probabilities, labels=labels)\n",
+    "    print(\"Etichette assegnate (B=1, Y=2, G=3, T=0):\", cleanup)\n",
+    "    cleanup = [cleanup[a] for a in range(0, len(cleanup))]\n",
+    "    cleanup += [cleanup.index(0)]\n",
+    "    imm_testina = final_arr[cleanup[-1]]\n",
+    "    \n",
+    "    return cleanup, w, h, imm_testina"
    ]
   },
   {
@@ -681,7 +710,16 @@
     "    else :\n",
     "        return None, None, 0\n",
     "\n",
-    "def maggiorColore(state):\n",
+    "def h_maggiorColore(state):\n",
+    "    \"\"\"Funzione che prende in input lo stato iniziale nel problema,\n",
+    "    e restituisce la label con maggiore concentrazione.\n",
+    "\n",
+    "    Args:\n",
+    "        state (): Stato iniziale del problema\n",
+    "\n",
+    "    Returns:\n",
+    "        label: label con maggiore presenza in questo stato.\n",
+    "    \"\"\"\n",
     "    contatore = {}\n",
     "    for label in state[:-1]:\n",
     "        if label not in contatore:\n",
@@ -691,8 +729,34 @@
     "    maggiorColorePresente = max(contatore, key = contatore.get)\n",
     "    return maggiorColorePresente\n",
     "\n",
-    "def manhattan(node, maggiorColorePresente, w) :\n",
-    "    labelpresenti ="
+    "def h_color_difference(node, label_magg_freq):\n",
+    "    \"\"\"Counter che indica sullo stato node quanti colori diversi ci sono,\n",
+    "    che non siano il più frequente\n",
+    "\n",
+    "    Args:\n",
+    "        node (node): stato in cui siamo arrivati\n",
+    "        label_magg_freq (label): colore con maggiore frequenza\n",
+    "\n",
+    "    Returns:\n",
+    "        int: numero di colori che non sono il più frequente.\n",
+    "    \"\"\"\n",
+    "    label_maggiore_freq = label_magg_freq\n",
+    "    contatore_label_diff = 0 #contatore per quanti colori diversi ci sono\n",
+    "    for label in node.state[:-1]: #escludo la posizione della testina\n",
+    "        if label != label_maggiore_freq:\n",
+    "            contatore_label_diff += 1\n",
+    "    return contatore_label_diff\n",
+    "\n",
+    "def h_manhattan(node, maggiorColorePresente, w) :\n",
+    "    labelPresentiNonMaxFreq = h_color_difference(node, maggiorColorePresente)\n",
+    "    #calcoliamo la distanza Manhattan dalla testian alla cella più vicina (con colore che non sia il maggioreColorePresente)\n",
+    "    posi_cursore = node.state[-1]\n",
+    "    min_distanza = float('inf')\n",
+    "    for i, label in enumerate(node.state[:-1]):\n",
+    "        if label != maggiorColorePresente:\n",
+    "            distanza = abs(posi_cursore // w - i // w) + abs(posi_cursore % w - i % w)\n",
+    "            min_distanza = min(min_distanza, distanza)\n",
+    "    return labelPresentiNonMaxFreq + min_distanza"
    ]
   }
  ],
