--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "#Qui dobbiamo controllare se serve veramente l'import di search\n",
-    "\n",
+    "import search\n",
     "#Funzioen che procede a prendere gli indici delle lettere/colori e le mappa\n",
     "#direttamente al loro peso corrispettivo\n",
     "def pesoColore(colore) :\n",
@@ -665,7 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from search import *\n",
+    "import search\n",
     "\n",
     "#Best First Search per poter usare A* come alg di ricerca\n",
     "def best_first_search_graph_h(problem,  funzEur, no_memoize = False, t = -1) :\n",
