--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "#Qui dobbiamo controllare se serve veramente l'import di search\n",
-    "import search\n",
+    "\n",
     "#Funzioen che procede a prendere gli indici delle lettere/colori e le mappa\n",
     "#direttamente al loro peso corrispettivo\n",
     "def pesoColore(colore) :\n",
@@ -249,7 +249,7 @@
     "  return risultato\n",
     "\n",
     "\n",
-    "  class ProblemaColori(problem) :\n",
+    "class ProblemaColori(problem) :\n",
     "    #inizializzazione del problema\n",
     "    def __init__(self, initial, larghezza, altezza) :\n",
     "        self.l = larghezza\n",
@@ -665,7 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import search\n",
+    "from search import *\n",
     "\n",
     "#Best First Search per poter usare A* come alg di ricerca\n",
     "def best_first_search_graph_h(problem,  funzEur, no_memoize = False, t = -1) :\n",
@@ -757,6 +757,92 @@
     "            distanza = abs(posi_cursore // w - i // w) + abs(posi_cursore % w - i % w)\n",
     "            min_distanza = min(min_distanza, distanza)\n",
     "    return labelPresentiNonMaxFreq + min_distanza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4eaeded6",
+   "metadata": {},
+   "source": [
+    "visualizzazione della soluzione:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19478c7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display, clear_output\n",
+    "import ipwidgets as widgets\n",
+    "import matplotlib as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "#definiamo i colori base: W (bianco), B (blue), Y (giallo), G (verde)\n",
+    "\n",
+    "W = np.zeros((3, 3, 3, ), np.uint8)\n",
+    "Y = np.zeros((3, 3, 3, ), np.uint8)\n",
+    "B = np.zeros((3, 3, 3, ), np.uint8)\n",
+    "G = np.zeros((3, 3, 3, ), np.uint8)\n",
+    "\n",
+    "# Inserimento dei colori nelle variabili:\n",
+    "W[:, :, :, ] = (255, 255, 255)      #colore bianco\n",
+    "Y[:, :, :, ] = (255, 255, 0)        #colore giallo\n",
+    "B[:, :, :, ] = (0, 0, 255)          #colore blu\n",
+    "G[:, :, :, ] = (0, 255, 0)          #colore verde\n",
+    "\n",
+    "#lista dei colori\n",
+    "colori = [W, B, Y, G]\n",
+    "\n",
+    "def visualizzatore_esecuzione(percorso_soluzione, movimento_soluzione, larghezza, altezza, testina):\n",
+    "    stato_soluzione = [i.state.copy() for i in percorso_soluzione]\n",
+    "    indice_stato_corrente = 0\n",
+    "    \n",
+    "    def a_pressione_bottone(b):\n",
+    "        nonlocal indice_stato_corrente\n",
+    "        if b.description == 'Successivo' and indice_stato_corrente < len(state_solution) - 1:\n",
+    "            indice_stato_corrente += 1\n",
+    "        elif b.description == 'Precedente' and indice_stato_corrente > 0:\n",
+    "            indice_stato_corrente -= 1\n",
+    "            \n",
+    "        clear_output(wait=True) #pulisce l'output precedente\n",
+    "        mostra_stato(indice_stato_corrente)\n",
+    "    \n",
+    "    bottone_prossimo = widgets.Button(description = \"Successivo\")\n",
+    "    bottone_precedente = widgets.Button(description = \"Precedente\")\n",
+    "    bottone_prossimo.on_click(a_pressione_bottone)\n",
+    "    bottone_precedente.on_click(a_pressione_bottone)\n",
+    "    \n",
+    "    def mostra_stato(indice): #amici di monster allergy\n",
+    "        \n",
+    "        stato = stato_soluzione[indice]\n",
+    "        T_indice = stato[:-1]\n",
+    "        \n",
+    "        fig = plt.figure(figsize = (larghezza * 2, altezza * 2))\n",
+    "        for i in range(len(state)):\n",
+    "            plt.subplot(h, w, i+1)\n",
+    "            plt.xticks([])\n",
+    "            plt.yticks([])\n",
+    "            if i == T_indice:\n",
+    "                #mostra la testina nella cella corrente\n",
+    "                plt.imshow(testina.reshape(28, 28), cmap='gray')\n",
+    "            else:\n",
+    "                #mostra il colore della cella\n",
+    "                plt.imshow(colori[stato[i]])\n",
+    "        \n",
+    "        display(bottone_precedente)\n",
+    "        display(bottone_prossimo)\n",
+    "        \n",
+    "        if indice == 0:\n",
+    "            plt.suptitle(f\"STATO INIZIALE, PROSSIMA AZIONE: {movimento_soluzione[indice]}\")\n",
+    "        elif indice <= len(movimento_soluzione) -1:\n",
+    "            plt.suptitle(f\"AZIONE APPLICATA: {movimento_soluzione - 1} | PROSSIMA AZIONE: {movimento_soluzione[indice]}\")\n",
+    "        else:\n",
+    "            plt.suptitle(f\"STATO FINALE, AZIONE APPLICATA: {movimento_soluzione[indice -1]}\")\n",
+    "        plt.show()\n",
+    "            \n",
+    "    mostra_stato(indice_stato_corrente)"
    ]
   }
  ],
