--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -596,7 +596,7 @@
     "            blur = cv.GaussianBlur(gray, (5, 5), 0)\n",
     "            \n",
     "            #applichiamo la sogli adattiva\n",
-    "            th_GAUSSIAN = cv.adaptiveThreshold(blur. 255, cv.ADAPTIVE_THRESH_GAUSSIAN_C, cv.THRESH_BINARY, 11, 2)\n",
+    "            th_GAUSSIAN = cv.adaptiveThreshold(blur, 255, cv.ADAPTIVE_THRESH_GAUSSIAN_C, cv.THRESH_BINARY, 11, 2)\n",
     "            \n",
     "            #ridimensioniamo l'immagine\n",
     "            resize = cv.resize(th_GAUSSIAN, (28, 28), interpolation = cv.INTER_CUBIC)\n",
@@ -696,7 +696,7 @@
     "                  break\n",
     "                elif child in frontier:\n",
     "                  incumbent = frontier.get_Item(child)\n",
-    "                  if funzEur(incumbent) > funzEur(child)\n",
+    "                  if funzEur(incumbent) > funzEur(child):\n",
     "                    del frontier[incumbent]\n",
     "                    frontier.append(child)\n",
     "\n",
@@ -843,6 +843,49 @@
     "        plt.show()\n",
     "            \n",
     "    mostra_stato(indice_stato_corrente)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce0a3fa7",
+   "metadata": {},
+   "source": [
+    "demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb72df1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "import time\n",
+    "\n",
+    "#definizione di cleanup[]: cleanup[0] è lo stato iniziale del problema\n",
+    "#cleanup[1]: è la larghezza della griglia e cleanup[2] è l'altezza della griglia.\n",
+    "result = main()\n",
+    "cleanup = result[:3]\n",
+    "testina = result[3]\n",
+    "problema = ProblemaColori(cleanup[0], cleanup[1], cleanup[2])\n",
+    "label_magg_usate = h_maggiorColore(cleanup[0])\n",
+    "\n",
+    "avvio_tempo_del_mondo = time.time()\n",
+    "soluzione, azione, lunghezza = A_Star(problema, lambda node : h_manhattan(node, label_magg_usate, cleanup[1]))\n",
+    "\n",
+    "fine_tempo_del_mondo = time.time()\n",
+    "\n",
+    "if soluzione is not None:\n",
+    "    visualizzatore_esecuzione(soluzione.path(), soluzione.solution(), cleanup[1], cleanup[2], testina)\n",
+    "    \n",
+    "    print('Azione = ', azione)\n",
+    "    print('Costo = ', soluzione.path_cost)\n",
+    "    print('Lunghezza = ', lunghezza)\n",
+    "    print('Tempo = ', fine_tempo_del_mondo - avvio_tempo_del_mondo)\n",
+    "else:\n",
+    "    print(\"DATI INSUFFICIENTI PER RISPOSTA SIGNIFICATIVA.\")\n",
+    "    "
    ]
   }
  ],
