--- a/Uniform_Coloring_Pazzesco.ipynb
+++ b/Uniform_Coloring_Pazzesco.ipynb
@@ -45,7 +45,6 @@
     "from random import randint\n",
     "import random as rand\n",
     "from google.colab import drive\n",
-    "from google.colab import drive\n",
     "drive.mount('/content/drive')"
    ]
   },
@@ -285,7 +284,7 @@
     "        #Queste sotto sono le azione possibili che la testina/alg. puo eseguire normalmente non\n",
     "        #tenendo conto dei casi limiti per ora\n",
     "        testina = state[self.T]\n",
-    "        movPoss = ['destra', ' sinistra', 'su', 'giu', 'coloraBlu', 'coloraVerde', 'coloraGiallo']\n",
+    "        movPoss = ['destra', 'sinistra', 'su', 'giu', 'coloraBlu', 'coloraVerde', 'coloraGiallo']\n",
     "\n",
     "        #Dobbiamo togliere le prime azioni non possibili\n",
     "        #BORDI DELLA GRIGLIA\n",
@@ -293,9 +292,9 @@
     "          movPoss.remove('destra')\n",
     "        if testina % self.l == 0 :\n",
     "          movPoss.remove('sinistra') #Caso opposto a quello sopra, siamo tutto a sinistra\n",
-    "        if testina < self.w :\n",
+    "        if testina < self.l :\n",
     "          movPoss.remove('su')\n",
-    "        if testina >= self.w * (self.h - 1) :\n",
+    "        if testina >= self.l * (self.a - 1) :\n",
     "          movPoss.remove('giu')\n",
     "\n",
     "        #Per Carlo: Non facciamo ancora un return della lista dei movimenti perche' viene piu comodo\n",
@@ -349,7 +348,7 @@
     "    #Calcolo del costo di tutti i movimenti\n",
     "    def costo(self, c, state1, action, state2) :\n",
     "      if action in ('coloraBlu', 'coloraVerde', 'coloraGiallo') :\n",
-    "            colore = {'coloraBlu' : '2', 'coloraGiallo' : '25', 'coloraVerde' : '7'}[action]\n",
+    "            colore = {'coloraBlu' : '11', 'coloraGiallo' : '34', 'coloraVerde' : '16'}[action]\n",
     "            return c + pesoColore(colore)\n",
     "      else:\n",
     "            return c + 1"
@@ -652,7 +651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main()"
+    "#main()"
    ]
   },
   {
@@ -700,9 +699,10 @@
     "                  frontier = PriorityQueue('min', funzEur)\n",
     "                  frontier.append(child)\n",
     "                  break\n",
-    "                elif child in frontier:\n",
-    "                  incumbent = frontier.get_Item(child)\n",
-    "                  if funzEur(incumbent) > funzEur(child):\n",
+    "                frontier.append(child)\n",
+    "            elif child in frontier:\n",
+    "                incumbent = frontier.get_item(child)\n",
+    "                if funzEur(incumbent) > funzEur(child):\n",
     "                    del frontier[incumbent]\n",
     "                    frontier.append(child)\n",
     "\n",
@@ -783,7 +783,7 @@
     "!pip install ipywidgets\n",
     "from IPython.display import display, clear_output\n",
     "import ipywidgets as widgets\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "#definiamo i colori presenti all'interno griglia: W (bianco), B (blue), Y (giallo), G (verde)\n",
@@ -808,7 +808,7 @@
     "\n",
     "    def a_pressione_bottone(b):\n",
     "        nonlocal indice_stato_corrente\n",
-    "        if b.description == 'Successivo' and indice_stato_corrente < len(state_solution) - 1:\n",
+    "        if b.description == 'Successivo' and indice_stato_corrente < len(stato_soluzione) - 1:\n",
     "            indice_stato_corrente += 1\n",
     "        elif b.description == 'Precedente' and indice_stato_corrente > 0:\n",
     "            indice_stato_corrente -= 1\n",
@@ -824,14 +824,17 @@
     "    def mostra_stato(indice): #amici di monster allergy\n",
     "\n",
     "        stato = stato_soluzione[indice]\n",
-    "        T_indice = stato[:-1]\n",
+    "        t_indice = stato[-1]\n",
+    "\n",
+    "        #rimuoviamo la posizione della testina:\n",
+    "        stato_senza_t = stato[:-1]\n",
     "\n",
     "        fig = plt.figure(figsize = (larghezza * 2, altezza * 2))\n",
-    "        for i in range(len(state)):\n",
-    "            plt.subplot(h, w, i+1)\n",
+    "        for i in range(larghezza * altezza):\n",
+    "            plt.subplot(altezza, larghezza, i+1)\n",
     "            plt.xticks([])\n",
     "            plt.yticks([])\n",
-    "            if i == T_indice:\n",
+    "            if i == t_indice:\n",
     "                #mostra la testina nella cella corrente\n",
     "                plt.imshow(testina.reshape(28, 28), cmap='gray')\n",
     "            else:\n",
@@ -844,7 +847,7 @@
     "        if indice == 0:\n",
     "            plt.suptitle(f\"STATO INIZIALE, PROSSIMA AZIONE: {movimento_soluzione[indice]}\")\n",
     "        elif indice <= len(movimento_soluzione) -1:\n",
-    "            plt.suptitle(f\"AZIONE APPLICATA: {movimento_soluzione - 1} | PROSSIMA AZIONE: {movimento_soluzione[indice]}\")\n",
+    "            plt.suptitle(f\"AZIONE APPLICATA: {movimento_soluzione[indice -1]} | PROSSIMA AZIONE: {movimento_soluzione[indice]}\")\n",
     "        else:\n",
     "            plt.suptitle(f\"STATO FINALE, AZIONE APPLICATA: {movimento_soluzione[indice -1]}\")\n",
     "        plt.show()\n",
